# scx-gui

./: .gitignore  README.md  pyproject.toml
packaging/: build-rpm.sh  scx-gui.desktop  scx-gui.spec
scx_gui/: __init__.py  __main__.py  discovery.py  gui.py  help_parser.py  runtime.py
tests/: test_gui.py  test_help_parser.py  test_runtime.py
