[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scx-gui"
version = "0.3"
description = "A PySide6 GUI frontend for the installed openSUSE scx package"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.6",
]

[project.scripts]
scx-gui = "scx_gui.__main__:main"

[tool.setuptools.packages.find]
include = ["scx_gui*"]
